<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_want_on_your_burger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:id="@+id/rgMeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbBeef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beef"/>
                <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbChicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicken"/>
                <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbPork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pork"/>
    </RadioGroup>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rgMeat"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbCheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheese"
            android:layout_weight="1"/>
<androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbOnion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onion"
            android:layout_weight="1"/>
<androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbSalad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salad"
            android:layout_weight="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btnOrder"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLay"
    android:layout_marginTop="20dp"
    android:text="@string/order"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnOrder"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:text="@string/test"
        android:textSize="20sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>